@@ -3,9 +3,12 @@ package it.unibo.coordination.linda.test;
 import it.unibo.coordination.linda.core.Match;
 import it.unibo.coordination.linda.core.Template;
 import it.unibo.coordination.linda.core.Tuple;
+import org.javatuples.Pair;
+import org.javatuples.Triplet;
 import org.junit.Assert;
 import org.junit.Test;
 
+import java.util.Collections;
 import java.util.Map;
 import java.util.Optional;
 
@@ -18,19 +21,19 @@ public class TestMatch<T extends Tuple<T>, TT extends Template<T>, K, V, M exten
 
     @Test
     public void testEmptyMatch() {
-        final var emtpyMatch = getEmptyMatch();
+        final Pair<TT, M> emtpyMatch = getEmptyMatch();
         final TT template = emtpyMatch.getValue0();
         final M match = emtpyMatch.getValue1();
 
         Assert.assertEquals(template, match.getTemplate());
         Assert.assertFalse(match.isMatching());
         Assert.assertFalse(match.getTuple().isPresent());
-        Assert.assertEquals(Map.of(), match.toMap());
+        Assert.assertEquals(Collections.emptyMap(), match.toMap());
     }
 
     @Test
     public void testFailedMatch() {
-        final var failedMatch = getFailedMatch();
+        final Triplet<T, TT, M> failedMatch = getFailedMatch();
         final T tuple = failedMatch.getValue0();
         final TT template = failedMatch.getValue1();
         final M match = failedMatch.getValue2();
@@ -42,12 +45,12 @@ public class TestMatch<T extends Tuple<T>, TT extends Template<T>, K, V, M exten
         Assert.assertFalse(match.isMatching());
         Assert.assertTrue(match.getTuple().isPresent());
         Assert.assertEquals(tuple, match.getTuple().get());
-        Assert.assertEquals(Map.of(), match.toMap());
+        Assert.assertEquals(Collections.emptyMap(), match.toMap());
     }
 
     @Test
     public void testSuccessfulMatch() {
-        final var successfulMatch = getSuccessfulMatch();
+        final Triplet<T, TT, M> successfulMatch = getSuccessfulMatch();
         final T tuple = successfulMatch.getValue0();
         final TT template = successfulMatch.getValue1();
         final M match = successfulMatch.getValue2();
@@ -61,7 +64,7 @@ public class TestMatch<T extends Tuple<T>, TT extends Template<T>, K, V, M exten
         Assert.assertEquals(tuple, match.getTuple().get());
         Assert.assertEquals(template.matchWith(tuple).toMap(), match.toMap());
 
-        for (var kv : template.matchWith(tuple).toMap().entrySet()) {
+        for (Map.Entry<?, ?> kv : template.matchWith(tuple).toMap().entrySet()) {
             Assert.assertEquals(Optional.of(kv.getValue()), match.get((K) kv.getKey()));
         }
     }
